[package]
name = "feature_extractor"
version = "0.1.0"
edition = "2021"

[dependencies]
pcap = "2.2.0"
etherparse = "0.15.0"
thiserror = "1.0"
byteorder = "1.5.0"
redis = "0.27.2"
rmp-serde = "1.3.0"
serde = { version = "1.0.210", features = ["derive"] }
libc = "0.2.174"
falkordb = { version = "0.1.10" }
simple-dns = { version = "0.11.0" }
rustc-hash = "2.1.1"
toml = "0.8"